# Grafikafeladat

./: CMakeLists.txt  Makefile  main.c
include/: app.h  collision.h  game.h  math3d.h  render.h  texture.h
src/: app.c  collision.c  game.c  math3d.c  render.c  texture.c
